Photo layout improvements